<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_eng_step4"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_white"
    android:orientation="vertical"
    tools:context="com.eoksjon24.NewAuctionActivity$PlaceholderFragment" >
	
	<LinearLayout
	    android:id="@+id/layoutStep4"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
		android:background="@drawable/header_purple" >	    

		<TextView
		    android:id="@+id/txtStep4"
		    style="@style/HeaderAuctionText"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/text_step4"
		    android:textAllCaps="true"
		    android:textSize="12sp" />		
	</LinearLayout>

	<GridLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:columnCount="4"
	    android:orientation="horizontal" >
	    
	    <TextView android:text="@string/text_step4_start_price" />
	    <EditText 
	        android:id="@+id/etStartPrice" 
		    android:layout_width="wrap_content"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true"
            android:selectAllOnFocus="true"
        	android:imeOptions="actionUnspecified"
	        android:paddingLeft="5dp"
	        android:text="0.10" />
	    <TextView 
	        android:text="@string/text_EUR"
	    	android:paddingLeft="5dp" />
	    <Button
	        android:id="@+id/btnS4Q1"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="16dp"
            android:textColor="@android:color/holo_orange_dark"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="12sp"
            android:textStyle="bold"
	        android:text="\?" />
	    			    
	    <TextView 
	        android:id="@+id/txtBuyItNowPriceText" 
	        android:text="@string/text_step4_now_price" />
	    <EditText 
	        android:id="@+id/etBuyItNowPrice" 
		    android:layout_width="wrap_content"
	        android:inputType="numberDecimal"
	        android:maxLines="1"
	        android:singleLine="true"
	        android:selectAllOnFocus="true"
  			android:imeOptions="actionUnspecified"
	        android:paddingLeft="5dp" />
	    <TextView 
	        android:id="@+id/txtBuyItNowPriceEUR" 
	        android:text="@string/text_EUR"
	    	android:paddingLeft="5dp" />
	    <Button
	        android:id="@+id/btnS4Q2"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="16dp"
               android:textColor="@android:color/holo_orange_dark"
               android:background="?android:attr/selectableItemBackground"
               android:textSize="12sp"
               android:textStyle="bold"
	        android:text="\?" />
	    			    
        <Space />

        <CheckBox
            android:id="@+id/cbox_can_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/text_step4_can_change"
            android:textAppearance="?android:attr/textAppearanceSmall" />

	    <Button
	        android:id="@+id/btnS4Q3"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="16dp"
            android:textColor="@android:color/holo_orange_dark"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="12sp"
            android:textStyle="bold"
	        android:text="\?" />
        <Space />
	    	    
	    <TextView 
	        android:text="@string/text_step4_condition" />
		<RadioGroup
		    android:id="@+id/rg_condition"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" >	

		    <RadioButton
		        android:id="@+id/rb_condition1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_step4_condition_new"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
	
		    <RadioButton
		        android:id="@+id/rb_condition2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_step4_condition_used"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
	
		    <RadioButton
		        android:id="@+id/rb_condition3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_step4_condition_old"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
	
		    <RadioButton
		        android:id="@+id/rb_condition4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_step4_condition_antiques"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
	
		</RadioGroup>	
       	<Space />
		<Space />
       	    	    
	    <TextView 
	        android:text="@string/text_step4_start_date" />
		<EditText
			android:id="@+id/et_start_date"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
            android:inputType="none"
            android:focusable="false"
            android:maxLines="1"
            android:singleLine="true"
            android:selectAllOnFocus="true"
        	android:imeOptions="actionUnspecified"
        	android:text="" >
		</EditText>       	
		<Space />
		<Space />
	    	    		
	    <TextView 
	        android:text="@string/text_step4_start_time" />
		<EditText
			android:id="@+id/et_start_time"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
            android:inputType="none"
            android:focusable="false"
            android:maxLines="1"
            android:singleLine="true"
            android:selectAllOnFocus="true"
        	android:imeOptions="actionUnspecified"
        	android:text="" >
		</EditText>       	
       	<Space />
		<Space />
	    	    		
	    <TextView 
	        android:text="@string/text_step4_auction_duration" />
		<Spinner
			android:id="@+id/spinner_auction_duration"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		</Spinner>       	
       	<Space />
		<Space />
	    				
       	<Space />
	    <TextView 
	        android:id="@+id/tv_auction_end_text"
		    android:layout_width="wrap_content"
	        android:text="@string/text_step4_auction_end" />
		<Space />
       	<Space />

       	<Space />
	    <TextView 
	        android:id="@+id/tv_auction_end"
		    android:layout_width="wrap_content"
		    android:layout_columnSpan="2"
		    android:layout_gravity="fill_horizontal"
		    android:text="" />
<!--        	<Space /> -->
       	<Space />
       	
       					
	    <TextView 
	        android:text="@string/text_step4_ext_closure" />
		<RadioGroup
		    android:id="@+id/rg_ext_closure"
		    android:checkedButton="@+id/rb_ext_closure2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" >	

		    <RadioButton
		        android:id="@+id/rb_ext_closure1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_step4_2_min_more"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
	
		    <RadioButton
		        android:id="@+id/rb_ext_closure2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_step4_5_min_more"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
	
		    <RadioButton
		        android:id="@+id/rb_ext_closure3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_step4_10_min_more"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
	
		</RadioGroup>	
	    <Button
	        android:id="@+id/btnS4Q4"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="16dp"
            android:textColor="@android:color/holo_orange_dark"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="12sp"
            android:textStyle="bold"
	        android:text="\?" />
       	<Space />
	    	
	    <TextView 
	        android:text="@string/text_step4_payment_methods" />
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >

	        <CheckBox
	            android:id="@+id/cbox_pay_deposit"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:text="@string/text_step4_pay_deposit"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	        <CheckBox
	            android:id="@+id/cbox_pay_auction24"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:text="@string/text_step4_pay_auction24"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	        <CheckBox
	            android:id="@+id/cbox_pay_cash"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:checked="false"
	            android:text="@string/text_step4_pay_cash"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	        <CheckBox
	            android:id="@+id/cbox_pay_via_bank"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:checked="false"
	            android:text="@string/text_step4_pay_via_bank"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	    </LinearLayout>
	    <Button
	        android:id="@+id/btnS4Q5"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="16dp"
            android:textColor="@android:color/holo_orange_dark"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="12sp"
            android:textStyle="bold"
	        android:text="\?" />
		<Space />
       	
	    <TextView 
	        android:text="@string/text_step4_transport" />
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >

	        <CheckBox
	            android:id="@+id/cbox_transport_collect"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:checked="false"
	            android:text="@string/text_step4_transport_collect"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	        <CheckBox
	            android:id="@+id/cbox_transport_accord"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:checked="false"
	            android:text="@string/text_step4_transport_accord"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	    </LinearLayout>
	    <Space />
		<Space />       										    	    	    	    			    			    			    			    			
		
	</GridLayout>		

	<Button
        android:id="@+id/step4_end_button"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_blue"
        android:minHeight="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:enabled="false"
        android:text="@string/text_step_save_and_continue" />
						
	
</LinearLayout>
		    
