<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient_white"
    tools:context="com.eoksjon24.RegistrationActivity$PlaceholderFragment" >

    <!-- Registration form -->

    <ScrollView
        android:id="@+id/registration_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
        <LinearLayout
            style="@style/RegistrationFormContainer"
            android:orientation="vertical" >

		    <TextView
		        android:id="@+id/textDescription"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="10dp"
		        android:text="@string/text_personal_information"
		        android:textColor="@android:color/holo_orange_dark" />

            <TextView
                android:id="@+id/promptFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/prompt_fullname"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="12sp" />

		    <TextView
		        android:id="@+id/textFullName"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="0dp"
		        android:scrollbars = "vertical"
		        android:textColor="@android:color/black"
		        android:text="@string/temp_FullName" />
		    
            <TextView
                android:id="@+id/promptIK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/prompt_personalcode"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="12sp" />

		   <TextView
		        android:id="@+id/textIK"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="0dp"
		        android:scrollbars = "vertical"
		        android:textColor="@android:color/darker_gray"
		        android:text="@string/temp_IK" />
		    
            <TextView
                android:id="@+id/promptStreetHouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/prompt_street_house"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="12sp" />

		   <EditText
                android:id="@+id/street_house"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_street_house"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/promptCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/prompt_city"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="12sp" />

		   <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_city"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
            
            <TextView
                android:id="@+id/promptPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/prompt_phone_nr"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="12sp" />

		   <EditText
                android:id="@+id/phone_nr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_phone_nr"
                android:inputType="text|phone"
                android:maxLines="1"
                android:singleLine="true" />
            
		    <TextView
		        android:id="@+id/textInfo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="10dp"
		        android:text="@string/text_user_account_info"
		        android:textColor="@android:color/holo_orange_dark" />

            <TextView
                android:id="@+id/promptEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/prompt_email"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="12sp" />

		    <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
            
                <TextView
                    android:id="@+id/promptUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
	                android:layout_marginLeft="10dp"
	                android:layout_marginTop="10dp"
	                android:textColor="@android:color/holo_blue_dark"
                    android:text="@string/promptUserName"
                    android:textSize="12sp" />

		    <EditText
                android:id="@+id/account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_account_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />           
            
            <TextView
                android:id="@+id/prompt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/prompt_password"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="12sp" />

		    <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

             <TextView
                android:id="@+id/prompt_password_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/prompt_password_retry"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="12sp" />

		    <EditText
                android:id="@+id/password_retry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_retry"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/cbox_mail_news1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/text_news1" />

            <CheckBox
                android:id="@+id/cbox_mail_news2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/text_news2" />

		    <TextView
		        android:id="@+id/textEULA"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="10dp"
		        android:text="@string/text_user_agreement"
		        android:textColor="@android:color/holo_orange_dark" />

		    <TextView
		        android:id="@+id/textViewAgreement"
		        android:layout_width="match_parent"
		        android:layout_height="200dp"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="10dp"
		        android:scrollbars = "vertical"
		        android:textColor="@android:color/darker_gray"
		        android:text="@string/temp_big_text" />

		    <Button
                android:id="@+id/registration_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:background="@drawable/btn_black"
                style="@style/ButtonText"
                android:text="@string/registration_register" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
